<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/anynoise_history_header_bg"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tv_head0"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingEnd="6dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/history_col_time" />

    <TextView
        android:id="@+id/tv_head1"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingEnd="6dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/history_col_listener" />

    <TextView
        android:id="@+id/tv_head2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingEnd="6dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/history_col_duration" />

    <TextView
        android:id="@+id/tv_head3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingEnd="6dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/history_col_audio" />

    <TextView
        android:id="@+id/tv_head4"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingEnd="6dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/history_col_type" />

    <TextView
        android:id="@+id/tv_head5"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/history_col_label" />

</LinearLayout>
